--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #030712;
+  /* background-color: #F9FAFB; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
