Add lodash.debounce dependency, update wallet address, and enhance CardHero component with BTC to USD conversion and improved UI

--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #030712;
-  /* background-color: #F9FAFB; */
+  /* background-color: #0D1217; */
+  background-color: #F9FAFB;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
